Modified script.js, main scss and index.html, added hamburger menu transformation

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,15 @@
     <title>B. Digital</title>
   </head>
 
-  <body>
+  <body> 
     <header class="mobile-header">
+     
       <nav class="mobile-header__nav">
         <a class="mobile-header__logo" href="#"
-          >B<span class="mobile-header__span">.</span>Digital</a
+          >B<span class="mobile-header__dot">.</span>Digital</a
         >
 
-        <a href="#" class="mobile-header__menu">
+        <a href="#" id="btnHamburger" class="mobile-header__menu">
           <span></span>
           <span></span>
           <span></span>
