Added mixins.scss, modified header for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="scss/main.scss" />
     <script src="js/script.js" defer></script>
     <script src="js/expansion-panel.js" defer></script>
+    
     <script
       src="https://kit.fontawesome.com/89fc437f1e.js"
       crossorigin="anonymous"
@@ -22,28 +23,32 @@
           >B<span class="mobile-header__dot">.</span>Digital</a
         >
 
-        <a href="#" id="btnHamburger" class="mobile-header__menu">
+        <a href="#" id="btnHamburger" class="mobile-header__menu hide-for-desktop" >
           <span></span>
           <span></span>
           <span></span>
         </a>
       </nav>
     </header>
-    <!--<header class="main">
-    <a class="main__logo" href="#">B<span class="main__span">.</span>Type</a>
-    <div class="main__nav">
-      <ul class="main__items">
-        <li class="main__item"><a class="main__element-active" href="#">Products</a></li>
-        <li class="main__item"><a class="main_element" href="#">Services</a></li>
-        <li class="main__item"><a class="main_element" href="#">About us</a></li>
-        <li class="main__item"><a class="main_element" href="#">Careers</a></li>
-        <li class="main__item"><a class="main_element" href="#">Blog</a></li>
-        <li class="main__item"><a class="main_element" href="#">Contact</a></li>
-      </ul>
-      <button class="main_btn">Shop now</button>
-    </div>
-  </header>
--->
+    <header    class="main-header hide-for-mobile"   >
+     <div class="main-header__nav">
+      <a class="main-header__logo" href="#">
+        <img src="assets/images/Bmain.png" alt="">
+      <img src="assets/images/dotmain.png" alt="">
+       <img src="assets/images/typemain.png" alt=""></a>
+      <div class="main-header__nav__links">
+        <a class="main-header__nav__link" href="#">Products</a>
+        <a class="main-header__nav__link" href="#">Services</a>
+        <a class="main-header__nav__link" href="#">About us</a>
+        <a class="main-header__nav__link" href="#">Careers</a>
+        <a class="main-header__nav__link" href="#">Blog</a>
+        <a class="main-header__nav__link" href="#">Contact</a>
+      </div>
+      <button class="buy__btn main-header__btn ">Shop now</button>
+     
+      </div>
+    </header>
+
     <section class="hero__wrapper">
       <gliphy unicode="f0a8"></gliphy>
 
