fix header media queries

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
     </header>
-    <header class="main-header hide-for-mobile">
+    <header class="main-header">
       <div class="main-header__nav">
         <a class="main-header__logo" href="#">
           <img src="assets/images/Bmain.png" alt="" />
