desktop layout example

--- a/src/index.html
+++ b/src/index.html
@@ -74,21 +74,27 @@
         Eligible for Shipping To Mars or somewhere else
       </p>
     </section>
-    <section class="redType__section">
-      <img class="redType__img" src="assets/images/typewriter-red.png" alt="" />
-      <h1 class="redType__title">Manual typewriter red</h1>
-      <p class="redType__p">Ships to Serbia</p>
-      <button class="buy__btn redType__btn">See details</button>
-    </section>
-    <section class="redType__section">
-      <img
-        class="redType__img"
-        src="assets/images/typewriter-black.png"
-        alt=""
-      />
-      <h1 class="redType__title">Manual typewriter black</h1>
-      <p class="redType__p">Ships to Serbia</p>
-      <button class="buy__btn redType__btn">See details</button>
+    <section class="redtype">
+      <article class="redType__section">
+        <img
+          class="redType__img"
+          src="assets/images/typewriter-red.png"
+          alt=""
+        />
+        <h1 class="redType__title">Manual typewriter red</h1>
+        <p class="redType__p">Ships to Serbia</p>
+        <button class="buy__btn redType__btn">See details</button>
+      </article>
+      <article class="redType__section">
+        <img
+          class="redType__img"
+          src="assets/images/typewriter-black.png"
+          alt=""
+        />
+        <h1 class="redType__title">Manual typewriter black</h1>
+        <p class="redType__p">Ships to Serbia</p>
+        <button class="buy__btn redType__btn">See details</button>
+      </article>
     </section>
     <section class="typewriters__faq">
       <h1>Typewriters FAQ</h1>
